migrated to ipynb, it's handy

--- a/A1/A1.ipynb
+++ b/A1/A1.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from math import sqrt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from math import sqrt"
    ]
   },
   {
@@ -32,14 +32,14 @@
     "        self.count = -1\n",
     "        for (a, b) in self.exp:\n",
     "            self.count += 1\n",
-    "            res = (dataframe[\"lat\"] ** a) * (dataframe[\"lon\"] ** b)\n",
+    "            res = ((dataframe[\"lat\"] ** a) * (dataframe[\"lon\"] ** b))\n",
     "            self.data.insert(self.count, \"col\" + str(a) + str(b), res, True)\n",
     "\n",
     "        self.count += 1 \n",
     "        dataframe = normalize(dataframe)\n",
     "        self.data = normalize(self.data)\n",
     "        self.data[\"col00\"] = [1.0]*len(self.data)\n",
-    "\n",
+    "        \n",
     "        # generate a 70-20-10 split on the data:\n",
     "        X = self.data[:304113]\n",
     "        Y = dataframe[\"alt\"][:304113]\n",
@@ -57,7 +57,6 @@
    "outputs": [],
    "source": [
     "class RegressionModel:\n",
-    "\n",
     "    def __init__(self, N, X, Y, x, y, xval, yval):\n",
     "        \"\"\"\n",
     "        X :: training data                  (304113 x 3)\n",
@@ -98,10 +97,10 @@
     "            diff = ((self.X @ W) - self.Y)\n",
     "            err = 0.5 * (diff @ diff)\n",
     "            grad = (self.X.T @ diff)\n",
-    "            if count % 250 == 0:\n",
-    "                print(\"epoch =\", count, \"| err_diff =\", prev_err-err)\n",
-    "                print(\"error = \", err, \"||\", W)\n",
-    "                print(\"score =\", self.score(W), end=\"\\n\\n\")\n",
+    "            if count % 500 == 0:\n",
+    "                    print(\"epoch =\", count, \"| err_diff =\", prev_err-err)\n",
+    "                    print(\"error = \", err, \"||\", W)\n",
+    "                    print(\"score =\", self.score(W), end=\"\\n\\n\")\n",
     "            W -= lr * grad\n",
     "            if abs(prev_err-err) <= 1e-4:\n",
     "                break\n",
@@ -110,13 +109,28 @@
     "        print(count, err)\n",
     "        print(W, self.score(W), end=\"\\n\\n\")\n",
     "\n",
+    "    def stocastic_gradient_descent(self, epochs):\n",
+    "        \"\"\"\n",
+    "        train till error is almost constant\n",
+    "        \"\"\"\n",
+    "        lr = 0.05\n",
+    "        W = np.random.randn(self.N)\n",
+    "        for count in range(epochs):\n",
+    "            diff = ((self.X @ W) - self.Y)\n",
+    "            err = 0.5 * (diff @ diff)\n",
+    "            W -= lr * (((self.X[count] @ W) - self.Y[count]) * self.X[count])\n",
+    "            if count % 500 == 0:\n",
+    "                print(\"epoch =\", count)\n",
+    "                print(\"error =\", err, \"||\", W)\n",
+    "                print(\"score =\", self.score(W), end=\"\\n\\n\")\n",
+    "\n",
     "    def gradient_descent_L1_reg(self):\n",
     "        \"\"\"\n",
     "        attempts a L1 regularization on the data\n",
     "        considering 10% of training data as validation data\n",
     "        \"\"\"\n",
     "        W_fin = np.array([])\n",
-    "        lr, l1_fin = 8e-7, 0\n",
+    "        lr, l1_fin = 5e-7, 0\n",
     "        MVLE = 1e10\n",
     "        L1_vals = [0.0, 0.05, 0.15, 0.25, 0.35, 0.45,\n",
     "                   0.55, 0.65, 0.75, 0.85, 0.95, 1.0]\n",
@@ -127,14 +141,14 @@
     "            while True:\n",
     "                diff = ((self.X @ W) - self.Y)\n",
     "                err = 0.5 * ((diff @ diff) + l1*sum([abs(w) for w in W]))\n",
-    "                if count % 250 == 0:\n",
+    "                if count % 500 == 0:\n",
     "                    print(\"L1 hyperparamter =\", l1, end=\", \")\n",
     "                    print(\"epoch =\", count, \"| err_diff =\", prev_err-err)\n",
     "                    print(\"error = \", err, \"||\", W)\n",
     "                    print(\"score =\", self.score(W), end=\"\\n\\n\")\n",
     "                sgn_w = np.array([sgn(w) for w in W])\n",
     "                W -= lr * ((self.X.T @ diff) + 0.5*l1*sgn_w)\n",
-    "                if abs(prev_err-err) <= 0.05:\n",
+    "                if abs(prev_err-err) <= 0.005:\n",
     "                    break\n",
     "                prev_err = err\n",
     "                count += 1\n",
@@ -154,21 +168,21 @@
     "        W_fin = np.array([])\n",
     "        lr, l2_fin = 5e-7, 0\n",
     "        MVLE = 1e10\n",
-    "        L2_vals = [0.05, 0.15, 0.25, 0.35, 0.45,\n",
-    "                   0.55, 0.65, 0.75, 0.85, 0.95]\n",
+    "        L2_vals = [0.0, 0.05, 0.15, 0.25, 0.35, 0.45,\n",
+    "                   0.55, 0.65, 0.75, 0.85, 0.95, 1.0]\n",
     "        for l2 in L2_vals:\n",
     "            prev_err, count = 1e10, 0\n",
     "            W = np.random.randn(self.N)\n",
     "            while True:\n",
     "                diff = ((self.X @ W) - self.Y)\n",
     "                err = 0.5 * ((diff @ diff) + l2*sum([w*w for w in W]))\n",
-    "                if count % 250 == 0:\n",
+    "                if count % 500 == 0:\n",
     "                    print(\"L2 hyperparamter =\", l2, end=\", \")\n",
     "                    print(\"epoch =\", count, \"| err_diff =\", prev_err-err)\n",
     "                    print(\"error = \", err, \"||\", W)\n",
     "                    print(\"score =\", self.score(W), end=\"\\n\\n\")\n",
     "                W -= lr * ((self.X.T @ diff) + l2*W)\n",
-    "                if abs(prev_err-err) <= 0.05:\n",
+    "                if abs(prev_err-err) <= 0.005:\n",
     "                    break\n",
     "                prev_err = err\n",
     "                count += 1\n",
@@ -188,10 +202,7 @@
     "        B = self.X.T @ self.Y\n",
     "        A = self.X.T @ self.X\n",
     "        W = (np.linalg.inv(A)) @ B\n",
-    "        print(W, self.score(W))\n",
-    "        # diff = ((self.X @ W) - self.Y)\n",
-    "        # err = 0.5 * (diff @ diff)\n",
-    "        # print(\"train_error =\", err)"
+    "        print(W, self.score(W))"
    ]
   },
   {
@@ -202,10 +213,9 @@
    "source": [
     "columns = [\"junk\", \"lat\", \"lon\", \"alt\"]\n",
     "raw_df = pd.read_csv(\"3D_spatial_network.txt\", sep=',', header=None,\n",
-    "                     names=columns).drop(\"junk\", 1)\n",
+    "                     names=columns).drop(\"junk\", 1).sample(frac=1)\n",
     "\n",
-    "deg = input(\"Degree of Polynomial to be fit:\")\n",
-    "pre_processor = UnlimitedDataWorks(deg=int(deg))\n",
+    "pre_processor = UnlimitedDataWorks(deg=1)\n",
     "X_train, Y_train, x_val, y_val, x_test, y_test = pre_processor.train_test_split(raw_df)\n",
     "\n",
     "model = RegressionModel(N=pre_processor.count,\n",
@@ -217,7 +227,8 @@
     "                        yval=y_val)\n",
     "\n",
     "model.fit()\n",
-    "model.gradient_descent()\n",
+    "# model.gradient_descent()\n",
+    "model.stocastic_gradient_descent(50250)\n",
     "# model.gradient_descent_L1_reg()\n",
     "# model.gradient_descent_L2_reg()"
    ]
